Bug 450334 - "Search for... in this document" item in Text Selection context menu does not truncate new lines
Summary: "Search for... in this document" item in Text Selection context menu does not...
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.12.2
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2022-02-15 19:18 UTC by Jack Hill
Modified: 2022-02-17 14:22 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Bad "Search for..." item (33.47 KB, image/png)
2022-02-15 19:18 UTC, Jack Hill
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jack Hill 2022-02-15 19:18:43 UTC
Created attachment 146786 [details]
Bad "Search for..." item

SUMMARY


STEPS TO REPRODUCE
1. Highlight some multi-line text with the Text Selection tool
2. Right click
3. Look at the "Search for... in this document" item

OBSERVED RESULT
The first new line is not ignored so the menu item looks odd

EXPECTED RESULT
New lines should be ignored

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE 20220213
KDE Plasma Version: 5.24.0
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
The "Search for... with" item does not have this issue
Comment 1 Bug Janitor Service 2022-02-17 13:10:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/okular/-/merge_requests/565
Comment 2 Yuri Chornoivan 2022-02-17 14:22:57 UTC
Git commit 28e362b6a17e9d5d631548facbc6e4d8cba5a177 by Yuri Chornoivan.
Committed on 17/02/2022 at 13:09.
Pushed by aacid into branch 'master'.

Simplify the string for the 'Search for...' action

M  +1    -1    part/pageview.cpp

https://invent.kde.org/graphics/okular/commit/28e362b6a17e9d5d631548facbc6e4d8cba5a177