Simplify the string for the 'Search for...' action

BUG: 450334